--- a/api/qsharp/microsoft.quantum.math.randomsinglequbitpauli.yml
+++ b/api/qsharp/microsoft.quantum.math.randomsinglequbitpauli.yml
@@ -4,7 +4,7 @@ name: RandomSingleQubitPauli
 type: operation
 namespace: Microsoft.Quantum.Math
 summary: 随机返回一个 qubit Pauli 运算符。
-remarks: 此函数调用 <xref:microsoft.quantum.intrinsic.random>，因此其随机性取决于 `Random`的实现。
+remarks: 此函数调用<xref:microsoft.quantum.intrinsic.random>，因此其随机性依赖于的实现`Random`。
 syntax: 'operation RandomSingleQubitPauli () : Pauli'
 input:
   content: ()
@@ -12,13 +12,13 @@ input:
 output:
   content: Pauli
   types:
-  - summary: 作为 `[PauliI, PauliX, PauliY, PauliZ]`之一的 `Pauli` 运算符。
+  - summary: 是`Pauli`的一个运算符`[PauliI, PauliX, PauliY, PauliZ]`。
     isPrimitive: true
     uid: Pauli
 metadata:
-  ms.openlocfilehash: 564e6c78859d5f74e0fc4ca9c5467e806742b7b2
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: e0065244d20a9f9c6850a23625ecc3bbb73ace0f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73219937"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681511"
