--- a/api/qsharp/microsoft.quantum.machinelearning.controlledrotation.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.controlledrotation.yml
@@ -5,7 +5,7 @@ type: newtype
 namespace: Microsoft.Quantum.MachineLearning
 summary: 描述在其目标和控件索引、旋转轴和模型参数向量的索引方面的受控旋转。
 remarks: >-
-  可以通过将 `ControlIndices` 设置为空的索引数组 `new Int[0]`来表示不受控制的旋转。
+  通过将设置`ControlIndices`为空的索引数组， `new Int[0]`可以表示无法控制的旋转。
 
 
   ### <a name="examples"></a>示例
@@ -24,9 +24,9 @@ remarks: >-
   ```
 syntax: newtype ControlledRotation = ((Int, Int[]), Pauli, Int);
 metadata:
-  ms.openlocfilehash: b09588e77a43be10493184d4e3b8bbe7a0025ce6
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 058c1dc75dd169971d0c542d0577d739327e4d56
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77909511"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681681"
