--- a/api/qsharp/microsoft.quantum.measurement.mresetz.yml
+++ b/api/qsharp/microsoft.quantum.measurement.mresetz.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.measurement.mresetz
 name: MResetZ
 type: operation
 namespace: Microsoft.Quantum.Measurement
-summary: 按 `Z` 度量单个 qubit，并将其重置为标准基础状态 | 0 〉之后的度量。
+summary: '`Z`基于度量单个 qubit，并将其重置为标准基础状态 | 0 〉之后的度量。'
 syntax: 'operation MResetZ (target : Qubit) : Result'
 input:
   content: '(target : Qubit)'
@@ -15,13 +15,13 @@ input:
 output:
   content: Result
   types:
-  - summary: Pauli 中测量 `target` 的结果 $Z $ basis。
+  - summary: Pauli 中测量`target`的结果 $Z $ basis。
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: a0a07ec90e36b06640ff66340b7a3d979251b0ff
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 28b0de7e447156d327e165f4db01bdf625e984d6
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73231174"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681392"
