--- a/api/qsharp/microsoft.quantum.measurement.settobasisstate.yml
+++ b/api/qsharp/microsoft.quantum.measurement.settobasisstate.yml
@@ -4,7 +4,7 @@ name: SetToBasisState
 type: operation
 namespace: Microsoft.Quantum.Measurement
 summary: 通过测量 qubit 并在需要时应用位翻转，将 qubit 设置为给定的计算基础状态。
-remarks: 作为此操作的固定条件，`SetToBasisState(result, q)` 后立即调用 `M(q)` 将返回 `result`。
+remarks: 作为此操作的固定条件，将`M(q)`返回`result`之后`SetToBasisState(result, q)`立即调用。
 syntax: 'operation SetToBasisState (desired : Result, target : Qubit) : Unit'
 input:
   content: '(desired : Result, target : Qubit)'
@@ -23,9 +23,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 977d0d5b55a9372a6e45e08cb89804e213ddd72c
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 002ca4716f0aa57c0ddd4f33d421402c068ad244
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77908423"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681362"
