--- a/api/qsharp/microsoft.quantum.oracles.deterministicstateoraclefromstateoracle.yml
+++ b/api/qsharp/microsoft.quantum.oracles.deterministicstateoraclefromstateoracle.yml
@@ -3,30 +3,30 @@ uid: microsoft.quantum.oracles.deterministicstateoraclefromstateoracle
 name: DeterministicStateOracleFromStateOracle
 type: function
 namespace: Microsoft.Quantum.Oracles
-summary: 将 `StateOracle` 类型的 oracle 转换为 `DeterministicStateOracle`。
+summary: 将类型`StateOracle`的 oracle 转换为`DeterministicStateOracle`。
 syntax: 'function DeterministicStateOracleFromStateOracle (idxFlagQubit : Int, stateOracle : Microsoft.Quantum.Oracles.StateOracle) : Microsoft.Quantum.Oracles.DeterministicStateOracle'
 input:
   content: '(idxFlagQubit : Int, stateOracle : Microsoft.Quantum.Oracles.StateOracle)'
   types:
   - name: idxFlagQubit
-    summary: '`stateOracle` 的标志 qubit 的索引 $A $，该索引显式作用于两个寄存器： $f $ 和 system $s $，例如 $A \ket{0}\_f\ket {\ psi}\_s $。'
+    summary: '`stateOracle` $A $ 的标志 qubit 的索引，该索引显式作用于两个寄存器： $f $ 和 system $s $，例如 $A \ket{0}\_f\ket {\ psi}\_s $。'
     isPrimitive: true
     uid: Int
   - name: stateOracle
-    summary: 准备 oracle $A $ `StateOracle`类型的状态。
+    summary: 准备 oracle $A 类型`StateOracle`为的状态。
     uid: microsoft.quantum.oracles.stateoracle
 output:
   content: Microsoft.Quantum.Oracles.DeterministicStateOracle
   types:
-  - summary: 同一状态准备 oracle $A $，但现在为类型 `DeterministicStateOracle`，因此它在 $a，s $ 不再显式分离，例如 $A \ket{0\psi}\_{as} $。
+  - summary: 相同状态准备 oracle $A $，但现在为类型`DeterministicStateOracle`，因此它在 $a，而不会再显式分离，如 $A \ket{0\psi}\_{as} $。
     uid: microsoft.quantum.oracles.deterministicstateoracle
 seeAlso:
 - microsoft.quantum.canon.stateoracle
 - microsoft.quantum.canon.deterministicstateoracle
 metadata:
-  ms.openlocfilehash: 5eda40115d4d4ca7b4187f76b5e0807695913407
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: cf6ddc1f1baff27c986f36d944e67192958a0d3f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73231089"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681288"
