--- a/api/qsharp/microsoft.quantum.oracles.obliviousoracle.yml
+++ b/api/qsharp/microsoft.quantum.oracles.obliviousoracle.yml
@@ -12,16 +12,16 @@ summary: >-
 
   - Ancilla 注册了 $O $ $a $ 的操作。
 
-  - 系统注册 $s $，需要应用所需的单一 $U $，并在 register $a $ $ 上的 $ \ket{t}\_$。
+  - 系统注册 $s $，将对其应用所需的单一 $U $，并在 register $a $ $ \ket{t}\_a $。
 remarks: >-
-  此 oracle 定义者： $ $ O\ket {s}\_a\ket {\ psi}\_s = \lambda\ket{t}\_U \ket{\psi}\_s + \sqrt{1-| \lambda | ^ 2} \ket{t ^ \perp}\_a\cdots $ $ 作用于 ancilla 状态 $ \ket{s}\_$ to在任何系统状态 $ \ket{\psi}\_s $ 中，使用 $\_\ket{t} 标记的基数中的 $ \lambda $ 来实现单一 $U $。
+  此 oracle 定义者： $ $ O\ket {s\_} a\ket {\ psi\_} s =\_\lambda\ket{t} a U\_\ket{\psi} s + \sqrt{1-| \lambda | ^ 2} \ket{t ^\_\perp} a\cdots $ $ 作用于 ancilla 状态 $ \ket{s}\_a $，在任何系统状态 $ \ket{\psi}\_s $ 上实现单一 $U $，该操作由 $ \lambda\_a $ 标记。
 
   第一个参数是 $ \ket{s}\_的 qubit 寄存器 $。 第二个参数是 $ \ket{\psi}\_s $ 的 qubit 寄存器。
 syntax: newtype ObliviousOracle = ((Qubit[], Qubit[]) => Unit is Adj + Ctl);
 metadata:
-  ms.openlocfilehash: f06527701dfad61843df66faca5dd265525b6aa6
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 9d7a799a9069e6d7eb3470d62322f803a68eb2e6
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73231055"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681260"
