--- a/api/qsharp/microsoft.quantum.oracles.obliviousoraclefromdeterministicstateoracle.yml
+++ b/api/qsharp/microsoft.quantum.oracles.obliviousoraclefromdeterministicstateoracle.yml
@@ -3,29 +3,29 @@ uid: microsoft.quantum.oracles.obliviousoraclefromdeterministicstateoracle
 name: ObliviousOracleFromDeterministicStateOracle
 type: function
 namespace: Microsoft.Quantum.Oracles
-summary: 将 oracles `DeterministicStateOracle` 和 `ObliviousOracle`组合在一起。
+summary: 将 oracles `DeterministicStateOracle`和`ObliviousOracle`组合在一起。
 syntax: 'function ObliviousOracleFromDeterministicStateOracle (ancillaOracle : Microsoft.Quantum.Oracles.DeterministicStateOracle, signalOracle : Microsoft.Quantum.Oracles.ObliviousOracle) : Microsoft.Quantum.Oracles.ObliviousOracle'
 input:
   content: '(ancillaOracle : Microsoft.Quantum.Oracles.DeterministicStateOracle, signalOracle : Microsoft.Quantum.Oracles.ObliviousOracle)'
   types:
   - name: ancillaOracle
-    summary: 一种状态，它准备 `DeterministicStateOracle` 操作 $a $ 的类型为的 oracle $A $。
+    summary: 一种状态，它准备 $a $ `DeterministicStateOracle`的注册，oracle $A $ 的类型。
     uid: microsoft.quantum.oracles.deterministicstateoracle
   - name: signalOracle
-    summary: 类型为的 oracle $U $ `ObliviousOracle` 联合 $a，s $。
+    summary: 类型`ObliviousOracle`为的 oracle $U $，它在注册 $a，s $ 上合作。
     uid: microsoft.quantum.oracles.obliviousoracle
 output:
   content: Microsoft.Quantum.Oracles.ObliviousOracle
   types:
-  - summary: Oracle $O = UA $ of `ObliviousOracle`类型。
+  - summary: Oracle $O = UA $ of 类型`ObliviousOracle`。
     uid: microsoft.quantum.oracles.obliviousoracle
 seeAlso:
 - microsoft.quantum.canon.deterministicstateoracle
 - microsoft.quantum.canon.obliviousoracle
 metadata:
-  ms.openlocfilehash: 2fc80a583ef8990b0a9043e4847d926f37b48b77
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 036d89ed2a9b3a0db2637964e4fabec7352a67d9
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73231004"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681244"
