--- a/api/qsharp/microsoft.quantum.preparation.preparearbitrarystate.yml
+++ b/api/qsharp/microsoft.quantum.preparation.preparearbitrarystate.yml
@@ -12,12 +12,12 @@ summary: >-
   具体而言，此操作的操作可以通过单一转换 $U $ 来模拟，该转换作用于全零状态
 
 
-  $ $ \begin{align} U\ket {0 ... 0} & = \ket{\psi} \\\\ & = \frac{\ sum_ {j = 0} ^ {2 ^ n-1} r_j e ^ {i t_j} \ket{j}} {\sqrt{\ sum_ {j = 0} ^ {2 ^ n-1} | r_j | ^ 2}}。
+  $ $ \begin{align} U\ket {0 ... 0} & = \ket{\psi} \\ \\ & = \frac{\ sum_ {j = 0} ^ {2 ^ n-1} r_j e ^ {i t_j} \ket{j}} {\sqrt{\ sum_ {j = 0} ^ {2 ^ n-1} | r_j | ^ 2}}。
 
   \end{align} $ $
-remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 如果指定了小于 $ 2 ^ n $ 的元素 $ （r_j，t_j） = （0.0，0.0） $，则 `coefficients` 将填充。
+remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 `coefficients`如果指定的元素为 $ （r_j、t_j） = （0.0，0.0） $，则将用元素填充。
 syntax: 'operation PrepareArbitraryState (coefficients : Microsoft.Quantum.Math.ComplexPolar[], qubits : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
-references: '- 量程逻辑电路的合成 Vivek Shende、Stephen Bullock、Igor Markov https://arxiv.org/abs/quant-ph/0406176'
+references: '- 量程逻辑电路的合成 Vivek Shende、Stephen Bullock、Igor Markovhttps://arxiv.org/abs/quant-ph/0406176'
 input:
   content: '(coefficients : Microsoft.Quantum.Math.ComplexPolar[], qubits : Microsoft.Quantum.Arithmetic.LittleEndian)'
   types:
@@ -39,9 +39,9 @@ functors:
 seeAlso:
 - microsoft.quantum.preparation.approximatelypreparearbitrarystate
 metadata:
-  ms.openlocfilehash: 2567df40b04c25e1cc579bf97787b2d8bbed6793
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: ef7c8040f224762bbee7935a2c1a67ede4434b0f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77907607"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681193"
